--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <h1> Orville Walker </h1>
+  <h1> OKW </h1>
   <p> Welcome to my website </p>
   <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />-->
 </body>
